--- a/Documentation/assets/sass/_base.scss
+++ b/Documentation/assets/sass/_base.scss
@@ -1,7 +1,7 @@
 @charset 'UTF-8';
 /* -----------------------------------------------------------------------------
 
-Sukces - Neat Personal Resume CV vCard Template
+Hessal | Hessal LPG Solutions
 
 File:			CSS Theme
 Version:        1.0
@@ -49,10 +49,10 @@ Table of Contents:
 
 -------------------------------------------------------------------------------- */
 
-// Import CSS3 Mixins 
+// Import CSS3 Mixins
 @import "compass/css3";
 
-// Import Config 
+// Import Config
 @import "config";
 
 // Import Styles
@@ -63,4 +63,3 @@ Table of Contents:
 @import "elements";
 @import "widgets";
 @import "animations";
-
