--- a/Documentation/assets/sass/theme-serif-orange.scss
+++ b/Documentation/assets/sass/theme-serif-orange.scss
@@ -1,9 +1,9 @@
 @charset 'UTF-8';
 
 // Fonts:
-$font-primary: 'Lora',Georgia,serif;
+$font-primary: "Lora", Georgia, serif;
 
 // Colors:
-$color-primary: #e76947;
+$color-primary: rgb(248, 154, 75);
 
 @import "_base";
