Added new style for project carousel

--- a/Documentation/assets/css-2/project-carousel.css
+++ b/Documentation/assets/css-2/project-carousel.css
@@ -1,22 +1,8 @@
-/*
-  5.  Projects
-
-      5.1 Project Carousel
-      5.2 Magnific popup
-      5.3 Project Details
-
-  6.  Experience
-  7.  Clients
-
-    
-    
 /*-------------------------------------------------------------------------------
   1. Global
 -------------------------------------------------------------------------------*/
 
 /* 1.1 General */
-
-@import url("bootstrap.min.css");
 @import url("font-awesome.min.css");
 @import url("animate.css");
 @import url("hover.css");
@@ -55,12 +41,6 @@
 /* ------------------------------------------------------------------------------- */
 /*  5. Projects
 /* ------------------------------------------------------------------------------- */
-
-.bg-projects {
-  position: relative;
-  background: url(../img/bg/bimex-2.png) 50% 0 no-repeat;
-  background-size: cover;
-}
 
 .project {
   padding: 0;
@@ -494,225 +474,7 @@ img.mfp-img {
   margin: 0 0 0 0.5em;
 }
 
-/* ------------------------------------------------------------------------------- */
-/*  7. Clients
-/* ------------------------------------------------------------------------------- */
-
-.clients {
-  text-align: center;
-}
-
-.clients-list {
-  margin: -3.8em -1.95em 0;
-}
-
-.clients-list .client {
-  display: inline-block;
-  vertical-align: middle;
-  padding: 3.8em 1.95em 0;
-  margin: 0;
-}
-
-.clients-list .client img {
-  opacity: 0.3;
-  display: block;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-}
-
-.clients-list .client a:hover img {
-  opacity: 1;
-}
-
-/* ------------------------------------------------------------------------------- */
-/*  8. Blog
-/* ------------------------------------------------------------------------------- */
-
-.bg-blog {
-  background: url(../img/bg/bimex-2.png) 50% 0 no-repeat;
-  background-size: cover;
-}
-
-.blog {
-  position: relative;
-  margin-bottom: 3em;
-  margin-right: 1px;
-  background-color: #373737;
-  box-shadow: 0 1px 15px rgba(0, 0, 0, 0.08);
-}
-
-.blog:last-child {
-  margin-bottom: 0;
-}
-
-.blog-thumbnail {
-  position: static;
-}
-
-.blog-thumbnail-bg {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 5px;
-  padding: 0;
-  border-radius: 0.25em 0 0 0.25em;
-  overflow: hidden;
-  background-size: cover;
-  background-position: 50% 0;
-}
-
-.blog-thumbnail-img img {
-  border-radius: 0.25em 0.25em 0 0;
-}
-
-.blog-info {
-  padding: 3.3em 3em;
-}
-
-.blog-info .blog-tags a {
-  background-color: #434343;
-}
-
-.blog-tags {
-  font-family: "montserratsemibold";
-  margin-top: -0.8em;
-}
-
-.blog-tags a {
-  display: inline-block;
-  font-size: 0.75em;
-  line-height: 1;
-  padding: 0.77em 1.1em 0.77em;
-  border-radius: 2em;
-  background-color: #333333;
-  text-transform: uppercase;
-  color: #6f6f6f;
-  margin-top: 0.8em;
-  margin: 0.8em 0.7em 0 0;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-.blog-tags a:hover {
-  background-color: #ff904c;
-  text-decoration: none;
-  color: #fff;
-}
-
-.blog-title {
-  font-family: "Oswald", sans-serif;
-  font-weight: 400;
-  font-size: 1.5em;
-  line-height: 1.333;
-  margin: 1.8em 0 0.8em;
-}
-
-.blog-info p {
-  margin-bottom: 0;
-  color: #fff;
-}
-
-.blog-meta {
-  font-size: 0.88em;
-  color: #b4b4b4;
-  overflow: hidden;
-}
-
-.blog-meta .author {
-  color: #686868;
-  float: left;
-}
-
-.blog-meta .author a {
-  font-family: "montserratsemibold";
-  color: #686868;
-}
-
-.blog-meta .author a:hover {
-  text-decoration: none;
-  color: rgba(255, 144, 76, 0.95);
-}
-
-.blog-meta .time {
-  float: right;
-  color: #686868;
-}
-
-.blog-info .blog-meta {
-  border-top: 1px solid #474747;
-  margin-top: 1.7em;
-  padding-top: 1.7em;
-}
-
-.read-more {
-  display: inline-block;
-  font-family: "montserratsemibold";
-  font-size: 0.88em;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-}
-
-.read-more {
-  padding-right: 2em;
-  background: url(../img/img-icon/read-more.png) right 50% no-repeat;
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.read-more:hover {
-  text-decoration: none;
-  background-position: 95% 50%;
-  color: rgba(255, 144, 76, 0.95);
-}
-
-.blog-info .read-more {
-  margin-top: 2.8em;
-}
-
-/* 8.1 Blog Details */
-
-.blog-details {
-  margin-bottom: 8.3em;
-}
-
-.col-secondary {
-  margin-top: 7.1em;
-}
-
-.post-header {
-  margin-bottom: 5em;
-}
-
-.post-header h3 {
-  font-family: "Oswald", sans-serif;
-  font-weight: 400;
-  font-size: 2.2em;
-  line-height: 1.43;
-  margin: 0 0 0 0;
-}
-
-.post-header .blog-meta {
-  margin-top: 2.45em;
-}
-
-.post-thumbnail {
-  margin-bottom: 2.5em;
-}
-
-.post-thumbnail img {
-  width: 100%;
-  border-radius: 0.25em;
-}
-
-.post .blog-tags {
-  margin-top: 5.4em;
-}
-
 /* 8.2 Widgets */
-
 .widget {
   margin-bottom: 3.65em;
 }
@@ -724,359 +486,6 @@ img.mfp-img {
   text-transform: uppercase;
   text-align: center;
   margin: 0 0 2.25em 0;
-}
-
-/* 8.3 Widget Recent Post */
-
-.recent-post {
-  margin-bottom: 1.7em;
-  overflow: hidden;
-}
-
-.recent-post:last-child {
-  margin-bottom: 0;
-}
-
-.recent-post-thumbnail {
-  width: 9.32em;
-  float: left;
-}
-
-.recent-post-thumbnail img {
-  border-radius: 0.25em;
-  max-width: 100%;
-}
-
-.recent-post-body {
-  padding-left: 11.2em;
-}
-
-.recent-post-title {
-  font-family: "Oswald", sans-serif;
-  font-weight: 400;
-  font-size: 1.1em;
-  line-height: 1.45;
-  text-transform: none;
-  letter-spacing: 0;
-  margin: 0;
-  position: relative;
-}
-
-.recent-post-time {
-  font-size: 0.88em;
-  color: #b4b4b4;
-  margin-top: 0.9em;
-}
-
-.image-description {
-  font-family: "Oswald", sans-serif;
-  font-size: 0.88em;
-  color: #ff904c;
-  margin-top: 0.9em;
-}
-
-/* ------------------------------------------------------------------------------- */
-/*  9. Contacts
-/* ------------------------------------------------------------------------------- */
-
-.bg-contacts {
-  background: url(../img/bg/bimex-2.png) 50% 0 no-repeat;
-  background-size: cover;
-}
-
-.contacts .fade-title-right {
-  left: 90%;
-}
-
-.row-field {
-  margin-left: -5px;
-  margin-right: -5px;
-}
-
-.col-field {
-  padding: 0 5px;
-}
-
-.col-message {
-  display: none;
-  margin-top: 20px;
-}
-
-.col-address {
-  font-size: 1.125em;
-  line-height: 2.1;
-  margin-top: 2em;
-}
-
-.form-submit {
-  margin-top: 1.2em;
-}
-
-.success-message {
-  display: none;
-}
-
-.error-message {
-  display: none;
-}
-
-.success-message .fa {
-  margin-right: 7px;
-  font-size: 1.5em;
-}
-
-.contact-details {
-  position: relative;
-  overflow: hidden;
-  margin-top: -1px;
-}
-
-.col-map {
-  height: 35em;
-}
-
-.gmap {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  padding: 0;
-  height: 100%;
-}
-
-.map-info {
-  padding: 1.2em;
-}
-.map-title {
-  margin-bottom: 2em;
-}
-
-.map-title h3 {
-  margin: 0;
-}
-
-.map-address-row {
-  margin-top: 1em;
-}
-
-.map-address-row .fa {
-  float: left;
-  margin: 0.35em 0.6em 0 0;
-  width: 1.1em;
-  text-align: center;
-  color: #ff904c;
-  font-size: 1.2em;
-}
-
-.map-address-row .text {
-  display: block;
-  overflow: hidden;
-  font-size: 1.15em;
-}
-
-.contact-info {
-  color: #fff;
-  padding: 0;
-  background: url(../img/bg/contact-details.jpg) 50% no-repeat;
-  background-size: cover;
-}
-
-.contact-info-content {
-  padding: 5.5em 5.6em;
-  background-color: rgba(255, 144, 76, 0.95);
-}
-
-.contact-info-title {
-  font-family: "Oswald", sans-serif;
-  font-size: 80px;
-  letter-spacing: 0.32em;
-  text-transform: uppercase;
-  color: #fff;
-  opacity: 0.1;
-  position: absolute;
-  top: 100%;
-  left: 100%;
-  margin-top: -0.5em;
-  margin-left: -2.3em;
-  -webkit-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-  -webkit-transform-origin: 0 0;
-  transform-origin: 0 0;
-}
-
-.contact-row {
-  position: relative;
-  z-index: 1;
-  margin-bottom: 2.3em;
-}
-
-.contact-row:last-child {
-  margin-bottom: 0;
-}
-
-.contact-row h4 {
-  margin: 0 0 0.8em;
-  color: #fff;
-}
-
-.contact-row .fa {
-  float: left;
-  width: 1.1em;
-  margin-top: -0.15em;
-  padding: 1px;
-  text-align: center;
-  font-size: 1.3em;
-  line-height: 1.25;
-}
-
-.contact-body {
-  padding-left: 2.6em;
-}
-
-.contact-content {
-  font-size: 1.3em;
-}
-
-.phone-row {
-  font-size: 1.3em;
-  letter-spacing: 0.2em;
-  margin-top: 0.5em;
-}
-
-/* ------------------------------------------------------------------------------- */
-/*  10. Footer
-/* ------------------------------------------------------------------------------- */
-.footer {
-  text-align: left;
-  margin: 7.1em 0 5.5em;
-  padding-top: 12em;
-  font-size: 15px;
-  color: #aaa;
-}
-
-.footer .brand {
-  margin-top: -0.45em;
-  font-size: 3.4em;
-}
-
-.footer-text-dp {
-  text-align: center;
-  padding-top: 0em;
-  font-size: 15px;
-}
-
-.footer-text-dp2 {
-  text-align: center;
-  padding-top: 4em;
-  margin-left: 0px;
-  font-size: 12px;
-}
-
-.footer-text-dp3 {
-  text-align: center;
-  padding-top: 0em;
-  margin-left: 0px;
-  font-size: 12px;
-}
-
-.footer-text-dp2 li {
-  display: inline-block;
-  margin-left: 4px;
-}
-
-.footer-text-dp3 li {
-  display: inline-block;
-  margin-left: 4px;
-}
-
-.footer-text-dp2 li a {
-  display: inline-block;
-  width: 65px;
-  height: 25px;
-  color: #aaa;
-  text-align: center;
-  text-decoration: none;
-}
-
-.footer-text-dp3 li a {
-  display: inline-block;
-  width: 100px;
-  height: 25px;
-  color: #aaa;
-  text-align: center;
-  text-decoration: none;
-}
-.footer-text-dp2 li a:hover {
-  color: #ff904c;
-}
-
-.footer-text-dp3 li a:hover {
-  color: #ff904c;
-}
-
-.author-link {
-  font-family: "Montserrat", sans-serif;
-  color: #d0d0d0;
-}
-
-.author-link:hover {
-  text-decoration: none;
-}
-
-ul.social-icons {
-  padding: 0px;
-  margin: 0px;
-  margin-top: 35px;
-  text-align: center;
-}
-ul.social-icons li {
-  display: inline-block;
-  margin-left: 4px;
-}
-ul.social-icons .fa {
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  line-height: 55px;
-  font-size: 31px;
-  transition: all 0.17s ease-in-out;
-  -moz-transition: all 0.17s ease-in-out;
-  -webkit-transition: all 0.17s ease-in-out;
-  -o-transition: all 0.17s ease-in-out;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -o-border-radius: 50%;
-  text-align: center;
-  text-decoration: none;
-}
-
-.social-icons .fa:hover {
-  background-color: #323232;
-}
-
-.social-icon-facebook .fa:hover {
-  color: #4267b2;
-}
-
-.social-icon-github .fa:hover {
-  color: #fff;
-}
-
-.social-icon-twitter .fa:hover {
-  color: #1da1f2;
-}
-
-.social-icon-instagram .fa:hover {
-  color: #fcaf45;
-}
-
-.social-icon-linkedin .fa:hover {
-  color: #0077b5;
-}
-
-.social-icon-pinterest .fa:hover {
-  color: #e60023;
 }
 
 /* ------------------------------------------------------------------------------- */
@@ -1214,7 +623,7 @@ ul.social-icons .fa {
 
   .col-secondary {
     margin-top: 10.62em;
-    margin-left: -5px;
+    margin-left: auto;
     padding: 0 10px 0 0;
   }
 
