--- a/Documentation/assets/css/themes/theme-sans_serif-orange.css
+++ b/Documentation/assets/css/themes/theme-sans_serif-orange.css
@@ -4245,6 +4245,15 @@ html[dir="rtl"] .timeline .timeline-event:before {
   background-image: linear-gradient(rgb(248, 154, 75), rgb(234, 62, 58));
 }
 
+.bg-img {
+  background-image: url(/img/bg/Fire-02.jpg);
+  background-size: 1400px;
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+  backdrop-filter: 20px;
+}
+
 .bg-info {
   background-color: #56aee5;
 }
