--- a/Documentation/assets/css/styles.css
+++ b/Documentation/assets/css/styles.css
@@ -14189,3 +14189,11 @@ Copyright (c) 2015 Daniel Eden
 .post-heading {
   color: white;
 }
+
+.list-lpg {
+  list-style-type: disc;
+}
+
+.list-lpg li {
+  padding-top: 12px;
+}
