--- a/Documentation/comment-section/vanilla js/comments.css
+++ b/Documentation/comment-section/vanilla js/comments.css
@@ -7,115 +7,35 @@
 }
 
 body {
-  background: #222222;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   font-family: "Roboto", sans-serif;
 }
 
-h1,
-h2,
-h3 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 2vh;
-  text-align: left;
-  margin-bottom: 5px;
+#container {
+  margin: 10% auto;
+  width: 100%;
+  max-width: 800px;
 }
 
-input {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  background-color: #222222;
-  color: white;
-  font-size: 15px;
-  width: 450px;
-  border-radius: 20px;
-  padding: 10px;
-  border: none;
-  outline: none;
-  transition: 0.5s;
-  margin-bottom: 10px;
+#hdcomments {
+  border: 1px solid #eee;
+  padding: 40px;
 }
 
-textarea {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  background-color: #222222;
-  color: white;
-  font-size: 15px;
-  width: 450px;
-  border-radius: 20px;
-  padding: 10px;
-  border: none;
-  outline: none;
-  transition: 0.5s;
+#hdcomments *,
+#hdcomments *::before,
+#hdcomments *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-input:hover {
-  background-color: orange;
-  color: black;
-}
-
-input::placeholder {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  color: white;
-}
-
-textarea::placeholder {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-style: italic;
-  color: grey;
-}
-
-.container {
-  background: white;
-  border-radius: 10px;
-  width: 700px;
-  height: 350px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
-}
-
-.btn {
-  background-color: rgb(215, 245, 156);
-  border-radius: 20px;
-  min-width: 200px;
-  min-height: 30px;
-  border: none;
-  transition: 0.5s all ease;
-  margin: 0 auto;
-  cursor: pointer;
-  padding: 10px;
-  outline: none;
+.hdc_label {
   display: block;
-  margin-top: 5px;
+  margin-bottom: 8px;
 }
 
-.btn:hover {
-  background-color: orange;
-}
-
-.content {
-  text-align: center;
-  background: royalblue;
-  color: white;
-  padding: 10px;
-  width: 500px;
-  border-radius: 10px;
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
-}
-
-.content p {
-  margin-bottom: 20px;
-  width: 450px;
+.hdc_input {
+  width: 100%;
+  padding: 12px 16px;
+  border: 1px solid #acc;
 }
