--- a/Documentation/assets/css/styles.css
+++ b/Documentation/assets/css/styles.css
@@ -14184,6 +14184,9 @@ Copyright (c) 2015 Daniel Eden
 
 .nav-image {
   filter: blur(4px);
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
 }
 
 .post-heading {
