Added new images and modified navigation panel href links

--- a/Documentation/assets/css/themes/theme-sans_serif-blue.css
+++ b/Documentation/assets/css/themes/theme-sans_serif-blue.css
@@ -2093,7 +2093,7 @@ html[dir="rtl"] .text-right {
 }
 @media only screen and (max-height: 700px) {
   #header.header-vertical .bottom {
-    position: relative;
+    position: absolute;
   }
 }
 #header.header-vertical #header-toggle {
