--- a/Documentation/assets/css/themes/theme-sans_serif-orange.css
+++ b/Documentation/assets/css/themes/theme-sans_serif-orange.css
@@ -6523,6 +6523,11 @@ a.mr50:hover {
   border-color: rgba(255, 255, 255, 0.1);
 }
 
+/* Figure Caption */
+.figure-text{
+  text-align: center;
+}
+
 /* Newsletter
 ----------------------------------------------------------*/
 .widget-newsletter {
