--- a/Documentation/assets/css/themes/theme-sans_serif-orange.css
+++ b/Documentation/assets/css/themes/theme-sans_serif-orange.css
@@ -94,6 +94,15 @@ img {
   -webkit-backface-visibility: hidden;
 }
 
+picture{
+  position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 /* ---------------------------------------------------------------------------- */
 /* --- 2. BASICS
 /* ----------------------------------------------------------------------------- */
